<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A80201"
        app:title="@string/app_name"
        app:titleTextColor="@color/purple_500"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login Page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/img_6692" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:hint="@string/text_username"
        android:textColorHint="@color/edit_hint_color"
        android:background="@drawable/edit_background"
        android:inputType="text"
        android:id="@+id/edtUsername"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:hint="@string/text_password"
        android:textColorHint="@color/edit_hint_color"
        android:background="@drawable/edit_background"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="25dp"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:text="@string/text_signup"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_margin="25dp"
            android:textAllCaps="false"
            android:background="@drawable/sign_up_btn"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignup"
            />


    </LinearLayout>
</ScrollView>


</LinearLayout>